# AndroidCmake

app/: build.gradle
app/src/: build_command.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: test.cpp  test.h  test1.h
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
